# L25_HomeWork

./: .env.example  .gitignore  ARCHITECTURE_SUMMARY.md  Development_Decisions_and_Missing_Info.md  PDR_EvenOdd_League.md  PRD_EvenOdd_League.md  QUICK_REFERENCE.md  README.md  ai_agents_mcp_book_part1_ENGLISH.md  homework_assignment_English_V2.md  main_book_mcp_large_scale_ENGLISH.md  main_home_assignment_easy_to_read_ENGLISH.md  main_home_assignment_more_in_depth_ENGLISH.md  requirements.txt  start_all.sh
SHARED/: README.md  pyproject.toml
SHARED/config/: system.json
SHARED/config/agents/: agents_config.json
SHARED/config/defaults/: player.json  referee.json
SHARED/config/games/: games_registry.json
SHARED/config/leagues/: league_2025_even_odd.json
SHARED/league_sdk/: README.md  __init__.py  config_loader.py  config_models.py  helpers.py  logger.py  mcp_server.py  repositories.py
SHARED/league_sdk/game_rules/: __init__.py  even_odd.py
SHARED/logs/league/league_2025_even_odd/: league_manager.log.jsonl  player_P01.log.jsonl  player_P02.log.jsonl  player_P03.log.jsonl  player_P04.log.jsonl  referee_REF01.log.jsonl  referee_REF02.log.jsonl
agents/league_manager/: README.md  handlers.py  main.py  requirements.txt  scheduler.py
agents/player_P01/: main.py  requirements.txt
agents/player_P03/: handlers.py  main.py
agents/player_P04/: handlers.py  main.py
agents/player_template/: main.py  requirements.txt  strategy.py
config/: local_config.yaml
doc/: protocol-spec.md
scripts/: start_league.sh
src/: league_manager.py  player_agent.py  referee.py
(+27 files in other folders)
