[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "league-sdk"
version = "1.0.0"
description = "Python SDK for AI Agent League system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=3.0"]

[tool.setuptools]
packages = ["league_sdk", "league_sdk.game_rules"]
